[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metadpmf"
version = "0.1.0"
description = "Metadynamics PMF workflow for GROMACS + PLUMED"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Alessandri Group" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml",
    "matplotlib",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/alessandri-group/metadpmf"
Repository = "https://github.com/alessandri-group/metadpmf"
Documentation = "https://alessandri-group.github.io/metadpmf/"

[project.scripts]
metadpmf = "metadpmf.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["metadpmf*"]

[tool.setuptools.package-data]
"metadpmf.templates" = ["*.mdp"]

[project.optional-dependencies]
test = ["pytest"]
